# PyPi

./: README.md
.github/workflows/: publish.yml
FaultSnap/: .gitignore  LICENSE  PROJECT_DETAILS.md  README.md  pyproject.toml
FaultSnap/.github/workflows/: publish.yml
FaultSnap/benchmarks/: speed_test.py
FaultSnap/faultsnap/: __init__.py  capsule.py  cli.py  config.py  context_graph.py  core.py  fingerprint.py  html.py  mask.py  serializer.py  storage.py
FaultSnap/faultsnap/integrations/: asyncio.py  django.py  fastapi.py  flask.py  multiprocessing.py  pytest_plugin.py  streamlit.py
FaultSnap/faultsnap/templates/: html_report.py
FaultSnap/tests/: test_faultsnap.py
PwdScore/: .gitignore  LICENSE  README.md  example.py  pyproject.toml
PwdScore/src/pwdscore/: __init__.py  core.py
PwdScore/tests/: test_pwdscore.py
