[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FaultSnap"
version = "1.0.1"
description = "A lightweight, offline-first crash debugging and developer handoff system."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name="Vinesh Nayak", email="vineshnayak.jatothu@gmail.com" },
]
keywords = ["debugging", "crash", "traceback", "offline", "developer-tools", "capsule"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=10.0.0",
]

[project.optional-dependencies]
html = ["jinja2>=3.0.0"]
all = ["jinja2>=3.0.0"]

[project.scripts]
faultsnap = "faultsnap.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "clean_env",
  "scratch",
  ".pytest_cache"
]

[tool.hatch.build.targets.wheel]
packages = ["faultsnap"]
artifacts = [
  "faultsnap/templates/mermaid.min.js"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/Vineshnayak/PyPi/tree/main/FaultSnap"
Repository = "https://github.com/Vineshnayak/PyPi/tree/main/FaultSnap"
