[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwdscore"
version = "0.1.0"
authors = [
  { name="Vinesh nayak", email="vineshnayak.jatothu@gmail.com" },
]
description = "A simple package to score password strength."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/Vineshnayak/PyPi/tree/main/PwdScore"
Issues = "https://github.com/Vineshnayak/PyPi/issues"
